--- a/app/index.html
+++ b/app/index.html
@@ -5,16 +5,19 @@ engine: ejs
 current: index
 ---
 
-<div class="banner">
-  <div class="bannerWWrap">
-    <p>Promise-Desert 2020 早春系列</p>
-    <h1>看得清，才能看得遠</h1>
-    <button class="btn">立即購買</button>
+<section class="banner">
+  <div class="container">
+    <div class="bannerWWrap">
+      <p>Promise-Desert 2020 早春系列</p>
+      <h1>看得清，才能看得遠</h1>
+      <button class="btn">立即購買</button>
+    </div>
   </div>
-</div>
+</section>
 
-<div class="intro">
-  <h2 class="introTitle">用專業的心，做專業的事</h2>
+<section class="intro">
+  <div class="container">
+    <h2 class="introTitle">用專業的心，做專業的事</h2>
   <div class="introContent">
     <div class="introContent__item">
       <div>icon</div>
@@ -37,4 +40,104 @@ current: index
       <p>使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
     </div>
   </div>
-</div>
+  </div>
+</section>
+
+<section class="classic">
+  <div class="container">
+    <h2>經典系列鏡框</h2>
+  <div class="sample">
+    <div class="sample__item">
+      <img src="./assets/images/home-section3-1.png" alt="home-section3-1">
+      <h3>OPTICAL</h3>
+    </div>
+    <div class="sample__item">
+      <img src="./assets/images/home-section3-2.png" alt="home-section3-2">
+      <h3>SUNGLASSES</h3>
+    </div>
+    <div class="sample__item">
+      <img src="./assets/images/home-section3-3.png" alt="home-section3-3">
+      <h3>FUNCTIONAL</h3>
+    </div>
+  </div>
+  </div>
+  
+</section>
+
+<section class="collab">
+  <div class="container">
+    <h2>聯名設計鏡框</h2>
+  <div class="design">
+    <div class="design__item">
+      <img src="./assets/images/home-section4-1.png" alt="home-section4-1">
+      <h3>DOUBLE A+</h3>
+    </div>
+    <div class="design__item">
+      <img src="./assets/images/home-section4-2.png" alt="home-section4-2">
+      <h3>YOUTH</h3>
+    </div>
+  </div>
+  </div>
+</section>
+
+<section class="recommend">
+  <div class="container">
+    <h2>顧客推薦</h2>
+  <div class="customer">
+    <div class="customer__item">
+      <img src="./assets/images/home-section5-1.png" alt="home-section5-1">
+      <p>Jessy</p>
+      <p>眼鏡品質優良，下次還會想來這邊購買！</p>
+      <p class="date">2021/06/20</p>
+    </div>
+    <div class="customer__item">
+      <img src="./assets/images/home-section5-2.png" alt="home-section5-2">
+      <p>凱倫</p>
+      <p>做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
+      <p class="date">2021/04/18</p>
+    </div>
+    <div class="customer__item">
+      <img src="./assets/images/home-section5-3.png" alt="home-section5-3">
+      <p>悠悠</p>
+      <p>謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
+      <p class="date">2020/12/25</p>
+    </div>
+    <div class="customer__item">
+      <img src="./assets/images/home-section5-4.png" alt="home-section5-4">
+      <p>Kyuan</p>
+      <p>服務很好，品質沒有任何問題，非常喜歡。</p>
+      <p class="date">2020/10/31</p>
+    </div>
+  </div>
+  </div>
+  
+</section>
+
+<section class="contact">
+  <div class="container">
+    <h2 class="title"></h2>
+    <p class="text"></p>
+    <form action="POST" class="contactForm">
+      <label for="" class="contactForm__input">
+        姓名
+        <input type="text">
+      </label>
+      <label for="" class="contactForm__input">
+        聯絡電話
+        <input type="tel">
+      </label>
+      <label for="" class="contactForm__input">
+        電子郵件
+        <input type="email">
+      </label>
+      <label for="" class="contactForm__input">
+        意見反映
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+      </label>
+      <label for="" class="contactForm__input">
+        <input type="checkbox">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。
+      </label>
+      <button class="btn submit">提交</button>
+    </form>
+  </div>
+</section>
