--- a/app/index.html
+++ b/app/index.html
@@ -6,37 +6,37 @@ current: index
 ---
 
 <section class="banner">
-  <div class="container">
-    <div class="bannerWWrap">
-      <p>Promise-Desert 2020 早春系列</p>
-      <h1>看得清，才能看得遠</h1>
-      <button class="btn">立即購買</button>
+  <div class="container bannerWrap">
+    <div class="bannerWrap__content font--dark_red">
+      <p class="font--36">Promise-Desert 2020 早春系列</p>
+      <h1 class="font--bold">看得清，才能看得遠</h1>
+      <button class="btn font--20 bannerWrap__btn">立即購買</button>
     </div>
   </div>
 </section>
 
 <section class="intro">
   <div class="container">
-    <h2 class="introTitle">用專業的心，做專業的事</h2>
+    <h2 class="title">用專業的心，做專業的事</h2>
   <div class="introContent">
     <div class="introContent__item">
       <div>icon</div>
-      <h3>單一價格</h3>
-      <p>無論任何度數皆不需追加費用即可擁有適合自己的薄型球面鏡片。</p>
+      <h3 class="font--24 font--dark_red font--bold">單一價格</h3>
+      <p class="font--16">無論任何度數皆不需追加費用即可擁有適合自己的薄型球面鏡片。</p>
     </div>
     <div class="introContent__item">
       <div>icon</div>
-      <h3>20 分鐘即可取件</h3>
-      <p>為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快 20 分鐘即可完成。</p>
+      <h3 class="font--24 font--dark_red font--bold">20 分鐘即可取件</h3>
+      <p class="font--16">為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快 20 分鐘即可完成。</p>
     </div>
     <div class="introContent__item">
       <div>icon</div>
-      <h3>安心售後服務</h3>
+      <h3 class="font--24 font--dark_red font--bold">安心售後服務</h3>
       <p>我們提供長達 120 天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</p>
     </div>
     <div class="introContent__item">
       <div>icon</div>
-      <h3>關於鏡片</h3>
+      <h3 class="font--24 font--dark_red font--bold">關於鏡片</h3>
       <p>使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
     </div>
   </div>
@@ -45,7 +45,7 @@ current: index
 
 <section class="classic">
   <div class="container">
-    <h2>經典系列鏡框</h2>
+    <h2 class="title">經典系列鏡框</h2>
   <div class="sample">
     <div class="sample__item">
       <img src="./assets/images/home-section3-1.png" alt="home-section3-1">
@@ -66,7 +66,7 @@ current: index
 
 <section class="collab">
   <div class="container">
-    <h2>聯名設計鏡框</h2>
+    <h2 class="title font--white">聯名設計鏡框</h2>
   <div class="design">
     <div class="design__item">
       <img src="./assets/images/home-section4-1.png" alt="home-section4-1">
@@ -82,7 +82,7 @@ current: index
 
 <section class="recommend">
   <div class="container">
-    <h2>顧客推薦</h2>
+    <h2 class="title">顧客推薦</h2>
   <div class="customer">
     <div class="customer__item">
       <img src="./assets/images/home-section5-1.png" alt="home-section5-1">
