--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,8 @@ current: index
 <section class="banner">
   <div class="container bannerWrap">
     <div class="bannerWrap__content font--dark_red">
-      <p class="font--36">Promise-Desert 2020 早春系列</p>
-      <h1 class="font--bold">看得清，才能看得遠</h1>
+      <p class="font--36 phone:font--16">Promise-Desert 2020 早春系列</p>
+      <h1 class="font--bold phone:font--24">看得清，才能看得遠</h1>
       <button class="btn font--20 bannerWrap__btn">立即購買</button>
     </div>
   </div>
@@ -45,7 +45,7 @@ current: index
 
 <section class="classic block">
   <div class="container">
-    <h2 class="title title--mb48">經典系列鏡框</h2>
+    <h2 class="title title--mb">經典系列鏡框</h2>
   <div class="sample">
     <div class="sample__item">
       <img src="./assets/images/home-section3-1.png" alt="home-section3-1">
@@ -65,14 +65,16 @@ current: index
 
 <section class="collab block">
   <div class="container">
-    <h2 class="title title--mb48 font--white">聯名設計鏡框</h2>
+    <h2 class="title title--mb font--white">聯名設計鏡框</h2>
   <div class="design">
     <div class="design__item">
-      <img src="./assets/images/home-section4-1.png" alt="home-section4-1">
+      <img src="./assets/images/home-section4-1.png" alt="home-section4-1" class="design__img--pc">
+      <img src="./assets/images/home-section4-1-sm.png" alt="home-section4-1" class="design__img--mobile">
       <h3 class="font--red font--bold">DOUBLE A+</h3>
     </div>
     <div class="design__item">
-      <img src="./assets/images/home-section4-2.png" alt="home-section4-2">
+      <img src="./assets/images/home-section4-2.png" alt="home-section4-2" class="design__img--pc">
+      <img src="./assets/images/home-section4-2-sm.png" alt="home-section4-2" class="design__img--mobile">
       <h3 class="font--red font--bold">YOUTH</h3>
     </div>
   </div>
@@ -81,7 +83,7 @@ current: index
 
 <section class="recommend block">
   <div class="container">
-    <h2 class="title title--mb48">顧客推薦</h2>
+    <h2 class="title title--mb">顧客推薦</h2>
   <div class="customer">
     <div class="customer__item font--16">
       <img src="./assets/images/home-section5-1.png" alt="home-section5-1">
@@ -138,7 +140,7 @@ current: index
 
 <section class="contact block">
   <div class="container container--sm">
-    <h2 class="title title--mb48">聯絡我們</h2>
+    <h2 class="title title--mb">聯絡我們</h2>
     <p class="font--20 contact__intro">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
     <form action="POST" class="contactForm font--16">
       <label for="" class="contactForm__input">
