--- a/app/optical.html
+++ b/app/optical.html
@@ -3,148 +3,149 @@ title: 眼鏡
 layout: ./app/layout2.ejs
 engine: ejs
 current: optical
-page: 2
 ---
 
-<section class="opticalBanner">
-    <img src="./assets/images/product-header-1.png" alt="product-header-1">
-    <img src="./assets/images/product-header-2.png" alt="product-header-2">
+<section class="glassesBanner">
+    <img src="./assets/images/product-header-1.png" alt="product-header-1" class="glassesBanner--pc">
+    <img src="./assets/images/product-header-2.png" alt="product-header-2" class="glassesBanner--pc">
+    <img src="./assets/images/product-header-sm-1.png" alt="product-header-1" class="glassesBanner--mobile">
+    <img src="./assets/images/product-header-sm-2.png" alt="product-header-2" class="glassesBanner--mobile">
 </section>
 
 <section class="opticalContent container block">
     <h2 class="enTitle font--bold">Celluloid Combi</h2>
     <h2 class="chTitle font--bold">賽璐珞鈦金屬混合鏡框</h2>
-    <div class="opticalItems">
-        <div class="opticalItem">
+    <div class="glassesItems">
+        <div class="glassesItem">
             <img src='./assets/images/product-1.png'  alt='product-1' >
-            <div class="opticalItem__subtitles font--bold">
+            <div class="glassesItem__subtitles font--bold">
                 <p class="font--24">BJ41600S</p>
                 <p class="font--24 font--red">NTD3,490</p>
             </div>
-            <div class="opticalItem__colors">
-                <div class="opticalItem__colors--brown"></div>
-                <div class="opticalItem__colors--orange"></div>
+            <div class="glassesItem__colors">
+                <div class="glassesItem__colors--brown"></div>
+                <div class="glassesItem__colors--orange"></div>
             </div>
         </div>
-        <div class="opticalItem">
+        <div class="glassesItem">
             <img src='./assets/images/product-2.png'  alt='product-2' >
-            <div class="opticalItem__subtitles font--bold">
+            <div class="glassesItem__subtitles font--bold">
                 <p class="font--24">BJ41600S</p>
                 <p class="font--24 font--red">NTD3,490</p>
             </div>
-            <div class="opticalItem__colors">
-                <div class="opticalItem__colors--brown"></div>
-                <div class="opticalItem__colors--orange"></div>
+            <div class="glassesItem__colors">
+                <div class="glassesItem__colors--brown"></div>
+                <div class="glassesItem__colors--orange"></div>
             </div>
         </div>
-        <div class="opticalItem">
+        <div class="glassesItem">
             <img src='./assets/images/product-3.png'  alt='product-3' >
-            <div class="opticalItem__subtitles font--bold">
+            <div class="glassesItem__subtitles font--bold">
                 <p class="font--24">BJ41600S</p>
                 <p class="font--24 font--red">NTD3,490</p>
             </div>
-            <div class="opticalItem__colors">
-                <div class="opticalItem__colors--brown"></div>
-                <div class="opticalItem__colors--orange"></div>
+            <div class="glassesItem__colors">
+                <div class="glassesItem__colors--brown"></div>
+                <div class="glassesItem__colors--orange"></div>
             </div>
         </div>
-        <div class="opticalItem">
+        <div class="glassesItem">
             <img src='./assets/images/product-4.png'  alt='product-4' >
-            <div class="opticalItem__subtitles font--bold">
+            <div class="glassesItem__subtitles font--bold">
                 <p class="font--24">BJ41600S</p>
                 <p class="font--24 font--red">NTD3,490</p>
             </div>
-            <div class="opticalItem__colors">
-                <div class="opticalItem__colors--brown"></div>
-                <div class="opticalItem__colors--orange"></div>
+            <div class="glassesItem__colors">
+                <div class="glassesItem__colors--brown"></div>
+                <div class="glassesItem__colors--orange"></div>
             </div>
         </div>
-        <div class="opticalItem">
+        <div class="glassesItem">
             <img src='./assets/images/product-5.png'  alt='product-5' >
-            <div class="opticalItem__subtitles font--bold">
+            <div class="glassesItem__subtitles font--bold">
                 <p class="font--24">BJ41600S</p>
                 <p class="font--24 font--red">NTD3,490</p>
             </div>
-            <div class="opticalItem__colors">
-                <div class="opticalItem__colors--brown"></div>
-                <div class="opticalItem__colors--orange"></div>
+            <div class="glassesItem__colors">
+                <div class="glassesItem__colors--brown"></div>
+                <div class="glassesItem__colors--orange"></div>
             </div>
         </div>
-        <div class="opticalItem">
+        <div class="glassesItem">
             <img src='./assets/images/product-6.png'  alt='product-6' >
-            <div class="opticalItem__subtitles font--bold">
+            <div class="glassesItem__subtitles font--bold">
                 <p class="font--24">BJ41600S</p>
                 <p class="font--24 font--red">NTD3,490</p>
             </div>
-            <div class="opticalItem__colors">
-                <div class="opticalItem__colors--brown"></div>
-                <div class="opticalItem__colors--orange"></div>
+            <div class="glassesItem__colors">
+                <div class="glassesItem__colors--brown"></div>
+                <div class="glassesItem__colors--orange"></div>
             </div>
         </div>
-        <div class="opticalItem">
+        <div class="glassesItem">
             <img src='./assets/images/product-1.png'  alt='product-1' >
-            <div class="opticalItem__subtitles font--bold">
+            <div class="glassesItem__subtitles font--bold">
                 <p class="font--24">BJ41600S</p>
                 <p class="font--24 font--red">NTD3,490</p>
             </div>
-            <div class="opticalItem__colors">
-                <div class="opticalItem__colors--brown"></div>
-                <div class="opticalItem__colors--orange"></div>
+            <div class="glassesItem__colors">
+                <div class="glassesItem__colors--brown"></div>
+                <div class="glassesItem__colors--orange"></div>
             </div>
         </div>
-        <div class="opticalItem">
+        <div class="glassesItem">
             <img src='./assets/images/product-2.png'  alt='product-2' >
-            <div class="opticalItem__subtitles font--bold">
+            <div class="glassesItem__subtitles font--bold">
                 <p class="font--24">BJ41600S</p>
                 <p class="font--24 font--red">NTD3,490</p>
             </div>
-            <div class="opticalItem__colors">
-                <div class="opticalItem__colors--brown"></div>
-                <div class="opticalItem__colors--orange"></div>
+            <div class="glassesItem__colors">
+                <div class="glassesItem__colors--brown"></div>
+                <div class="glassesItem__colors--orange"></div>
             </div>
         </div>
-        <div class="opticalItem">
+        <div class="glassesItem">
             <img src='./assets/images/product-3.png'  alt='product-3' >
-            <div class="opticalItem__subtitles font--bold">
+            <div class="glassesItem__subtitles font--bold">
                 <p class="font--24">BJ41600S</p>
                 <p class="font--24 font--red">NTD3,490</p>
             </div>
-            <div class="opticalItem__colors">
-                <div class="opticalItem__colors--brown"></div>
-                <div class="opticalItem__colors--orange"></div>
+            <div class="glassesItem__colors">
+                <div class="glassesItem__colors--brown"></div>
+                <div class="glassesItem__colors--orange"></div>
             </div>
         </div>
-        <div class="opticalItem">
+        <div class="glassesItem">
             <img src='./assets/images/product-4.png'  alt='product-4' >
-            <div class="opticalItem__subtitles font--bold">
+            <div class="glassesItem__subtitles font--bold">
                 <p class="font--24">BJ41600S</p>
                 <p class="font--24 font--red">NTD3,490</p>
             </div>
-            <div class="opticalItem__colors">
-                <div class="opticalItem__colors--brown"></div>
-                <div class="opticalItem__colors--orange"></div>
+            <div class="glassesItem__colors">
+                <div class="glassesItem__colors--brown"></div>
+                <div class="glassesItem__colors--orange"></div>
             </div>
         </div>
-        <div class="opticalItem">
+        <div class="glassesItem">
             <img src='./assets/images/product-5.png'  alt='product-5' >
-            <div class="opticalItem__subtitles font--bold">
+            <div class="glassesItem__subtitles font--bold">
                 <p class="font--24">BJ41600S</p>
                 <p class="font--24 font--red">NTD3,490</p>
             </div>
-            <div class="opticalItem__colors">
-                <div class="opticalItem__colors--brown"></div>
-                <div class="opticalItem__colors--orange"></div>
+            <div class="glassesItem__colors">
+                <div class="glassesItem__colors--brown"></div>
+                <div class="glassesItem__colors--orange"></div>
             </div>
         </div>
-        <div class="opticalItem">
+        <div class="glassesItem">
             <img src='./assets/images/product-6.png'  alt='product-6' >
-            <div class="opticalItem__subtitles font--bold">
+            <div class="glassesItem__subtitles font--bold">
                 <p class="font--24">BJ41600S</p>
                 <p class="font--24 font--red">NTD3,490</p>
             </div>
-            <div class="opticalItem__colors">
-                <div class="opticalItem__colors--brown"></div>
-                <div class="opticalItem__colors--orange"></div>
+            <div class="glassesItem__colors">
+                <div class="glassesItem__colors--brown"></div>
+                <div class="glassesItem__colors--orange"></div>
             </div>
         </div>
     </div>
